fix vertical align of progress bar's text

--- a/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
@@ -4158,6 +4158,11 @@ div.v-ratingstars-bar {
 	text-align: center;
 	width: 100%;
 	color: black;
+	height: 100%;
+}
+.progressbar-status .v-label {
+	display: table-cell;
+	vertical-align: middle;
 }
 /* Confirm Dialog */
 .custom-dialog div.v-panel-content-light {
